[package]
name = "roead"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
almost = { version = "0.2.0", optional = true }
base64 = {version = "0.13.0", optional = true }
binrw = { version = "0.9.2", optional = true }
cached = { version = "0.37.0", optional = true }
cxx = {version = "1.0.71", optional = true}
enumflags2 = { version = "0.7.5", optional = true }
enum-as-inner = { version = "0.5.0", optional = true }
indexmap = { version = "1.9.1", optional = true }
im-rc = { version = "15.1.0", optional = true }
join_str = "0.1.0"
lexical = { version = "6.1.1", optional = true, features = ["power-of-two"] }
once_cell = { version = "1.13.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
num-integer = { version = "0.1.45", optional = true }
rustc-hash = "1.1.0"
ryml = { version = "0.1.4", optional = true }
serde = { version = "1.0.139", features = ["derive"], optional = true }
serde_json = { version = "1.0.82", optional = true }
smartstring = { version = "1.0.1", optional = true}
thiserror = "1.0.31"

[build-dependencies]
cxx-build = { version = "1.0.71", optional = true }

[dev-dependencies]
jwalk = "0.6.0"
# roead = "0.12.2"

[features]
aamp = ["binrw", "enumflags2", "enum-as-inner", "smartstring", "indexmap", "almost"]
byml = ["binrw", "enum-as-inner", "smartstring", "almost"]
sarc = ["binrw", "num-integer", "serde", "serde_json", "cached"]
yaz0 = ["cxx", "cxx-build"]
yaml = ["ryml", "lexical", "base64", "once_cell", "parking_lot"]
with-serde = ["serde", "smartstring/serde", "im-rc/serde", "indexmap/serde"]
default = ["aamp", "byml", "sarc", "yaz0"]
