[package]
name = "roead"
description = "Rust bindings for oead C++ library for common Nintendo formats"
version = "0.25.2"
authors = ["Caleb Smith <c.smith@tuta.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/NiceneNerd/roead"
keywords = ["Nintendo", "aamp", "byml", "sarc", "yaz0"]
categories = ["game-development", "parsing"]
edition = "2021"
exclude = [
    "/test",
    "/lib/zlib-ng/infcover.dir",
    "/lib/zlib-ng/makecrct.dir",
    "/lib/zlib-ng/makefixed.dir",
    "/lib/zlib-ng/maketrees.dir",
    "/lib/zlib-ng/switchlevels.dir",
    "/lib/zlib-ng/x64",
]

[dependencies]
almost = { version = "0.2.0", optional = true }
base64 = { version = "0.22.0", optional = true }
binrw = { version = "0.13.3", optional = true }
cxx = { version = "1.0.71", optional = true }
indexmap = { version = "2.2.6", optional = true }
join_str = "0.1.0"
lexical = { version = "6.1.1", optional = true, features = ["power-of-two"] }
once_cell = { version = "1.13.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
num-integer = { version = "0.1.45", optional = true }
num-traits = { version = "0.2.15", optional = true }
rustc-hash = "1.1.0"
ryml = { version = "0.3.2", optional = true, features = ["std"] }
serde = { version = "1.0.139", features = ["derive"], optional = true }
serde_json = { version = "1.0.82", optional = true }
smartstring = "1"
thiserror = "1.0.31"

[build-dependencies]
cxx-build = { version = "1.0.71", optional = true }

[dev-dependencies]
jwalk = "0.8.1"

[features]
aamp = ["almost", "binrw", "indexmap", "num-traits", "once_cell", "parking_lot"]
byml = ["binrw", "almost", "num-traits"]
sarc = ["binrw", "num-integer", "serde", "serde_json", "once_cell", "indexmap"]
yaz0 = ["cxx", "cxx-build"]
yaml = ["ryml", "lexical", "base64"]
with-serde = ["serde", "smartstring/serde", "indexmap/serde"]
default = ["aamp", "byml", "sarc", "yaz0"]
